# src/types.ts
@@ -1,59 +1,78 @@
-import type { Input as MainInput, Output as MainOutput } from "../ejs/src/yt/solver/main.ts";
+import type {
+  Input as MainInput,
+  Output as MainOutput,
+} from "../ejs/src/yt/solver/main.ts";
 
 export interface Solvers {
-    n: ((val: string) => string) | null;
-    sig: ((val: string) => string) | null;
+  n: ((val: string) => string) | null;
+  sig: ((val: string) => string) | null;
 }
 
 export interface SignatureRequest {
-    encrypted_signature: string;
-    n_param: string;
-    player_url: string;
+  encrypted_signature: string;
+  n_param: string;
+  player_url: string;
 }
 
 export interface SignatureResponse {
-    decrypted_signature: string;
-    decrypted_n_sig: string;
+  decrypted_signature: string;
+  decrypted_n_sig: string;
 }
 
 export interface StsRequest {
-    player_url: string;
+  player_url: string;
 }
 
 export interface StsResponse {
-    sts: string;
+  sts: string;
 }
 
 export interface ResolveUrlRequest {
-    stream_url: string;
-    player_url: string;
-    encrypted_signature: string;
-    signature_key?: string;
-    n_param?: string;
+  stream_url: string;
+  player_url: string;
+  encrypted_signature: string;
+  signature_key?: string;
+  n_param?: string;
 }
 
 export interface ResolveUrlResponse {
-    resolved_url: string;
+  resolved_url: string;
+}
+
+export interface PoTokenRequest {
+  visitorData?: string;
+  videoId?: string;
+}
+
+export interface PoTokenResponse {
+  visitorDataToken: string;
+  visitorData: string;
+  videoIdToken?: string;
+  expiresAt: string;
 }
 
 export interface WorkerWithStatus extends Worker {
-    isIdle?: boolean;
+  isIdle?: boolean;
 }
 
 export interface Task {
-    data: string;
-    resolve: (output: string) => void;
-    reject: (error: any) => void;
+  data: string;
+  resolve: (output: string) => void;
+  reject: (error: any) => void;
 }
 
-export type ApiRequest = SignatureRequest | StsRequest | ResolveUrlRequest;
+export type ApiRequest =
+  | SignatureRequest
+  | StsRequest
+  | ResolveUrlRequest
+  | PoTokenRequest;
 
 // Parsing into this context helps avoid multi copies of requests
-// since request body can only be read once. 
+// since request body can only be read once.
 import { PlayerScript } from "./player.ts";
 
 export interface RequestContext {
-    req: Request;
-    body: ApiRequest;
-    playerScript?: PlayerScript;
+  req: Request;
+  body: ApiRequest;
+  playerScript?: PlayerScript;
 }
